--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "jwt-decode": "^4.0.0",
     "mdb-react-ui-kit": "^8.0.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-pro-sidebar": "^1.1.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
